--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
+    "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
