--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
+    "js-cookie": "^3.0.1",
     "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
